--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="/css/jass.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link rel="stylesheet" href="./css/spectre.min.css" />
+  </head>
 
-<body>
-</body>
+  <body>
+    {{> nav}}
+    {{{body}}}
+  </body>
 
 </html>
