--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -2,8 +2,21 @@
     --light: #EBEBEBff;
     --dark: #0B1329ff;
     --gray: #929299ff;
-    --darkblue: #0B1329ff;
+    --darkblue: #183761ff;
     --lightblue: #2B5381ff;
     --rust: #A94B2Cff;
     --mustard: #FBBF30ff;
+}
+
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+ html {
+    line-height: 1.15;
+    /* 1 */
+    -webkit-text-size-adjust: 100%;
+    /* 2 */
   }
