added login and nav to .handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+<header class="navbar">
+        <section class="navbar-section">
+            <h1 class="btn">LaborHub</h1>
+            <a href="/" class="btn btn-link">HOME</a>
+            <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
+            <a href="/login" class="btn btn-link">LOGIN</a>
+        </section>
+    </header>
+    {{{body}}}
 </body>
 
 </html>
