--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,16 @@
 </head>
 
 <body>
-<header class="navbar">
-        <section class="navbar-section">
-            <h1 class="btn">LaborHub</h1>
+<header class="navbar navsection">
+        <section class="navbar-section col-6">
             <a href="/" class="btn btn-link">HOME</a>
             <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
+        </section>
+          <section class="navbar-center col-3">
+          <!-- centered logo or brand -->
+          <h1>LaborHub</h1>
+        </section>
+        <section class="navbar-section col-3">
             <a href="/login" class="btn btn-link">LOGIN</a>
         </section>
     </header>
