--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,7 @@
-<div class="card">
-  <div class="card-image">
-    <img src="img/osx-el-capitan.jpg" class="img-responsive" />
-  </div>
-  <div class="card-header">
-    <div class="card-title h5">...</div>
-    <div class="card-subtitle text-gray">...</div>
-  </div>
-  <div class="card-body">
-    ...
-  </div>
-  <div class="card-footer">
-    <button class="btn btn-primary">...</button>
-  </div>
-</div>
+{{> nav}}
+{{!-- main page content --}}
+{{#if loggedIn}}
+<section class="main">Welcome~~</section>
+{{else}}
+<section class="main">Please log in.</section>
+{{/if}}
