--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <link rel="stylesheet" href="/css/jass.css" />
+
   </head>
 
   <body>
+    {{{body}}}
   </body>
 
 </html>
