--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,30 +1,8 @@
-<nav class="navbar">
-  <ul class="nav">
-    <li class="nav-item">
-      <a href="#">Elements</a>
-    </li>
-    <li class="nav-item active">
-      <a href="#">Layout</a>
-      <ul class="nav">
-        <li class="nav-item">
-          <a href="#">Flexbox grid</a>
-        </li>
-        <li class="nav-item">
-          <a href="#">Responsive</a>
-        </li>
-        <li class="nav-item">
-          <a href="#">Navbar</a>
-        </li>
-        <li class="nav-item">
-          <a href="#">Empty states</a>
-        </li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a href="#">Components</a>
-    </li>
-    <li class="nav-item">
-      <a href="#">Utilities</a>
-    </li>
-  </ul>
-</nav>
+<header class="navbar">
+  <section class="navbar-section">
+    <h1 class="btn">LaborHub</h1>
+    <a href="/" class="btn btn-link">HOME</a>
+    <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
+    <a href="/login" class="btn btn-link">LOGIN</a>
+  </section>
+</header>
