--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="/css/jass.css" />
-
+    <link rel="stylesheet" href="/css/spectre.min.css" />
+    <link rel="stylesheet" href="/css/spectre-icons.min.css" />
   </head>
 
   <body>
