Unsuccessful testing of validation.

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -10,11 +10,12 @@
 </div>
 <div class="form-group">
   <h2>Sign-Up</h2>
-  <form action="/register" method="POST">
+  <form action="/public/js/register.js" method="POST">
     <label class="form-label" for="input-example-1">Choose a Username:</label>
     <input class="form-input" type="text" id="input-example-1" />
     <label class="form-label" for="input-example-1">Choose a Password:</label>
     <input class="form-input" type="text" id="input-example-1" />
-    <button class="btn">Sign-Up</button>
+    <button type="submit" class="btn">Sign-Up</button>
   </form>
 </div>
+<script src="/public/js/login.js"></script>
