--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -10,7 +10,7 @@
 </div>
 <div class="form-group">
   <h2>Sign-Up</h2>
-  <form action="/public/js/register.js" method="POST">
+  <form action="/register" method="POST">
     <label class="form-label" for="input-example-1">Choose a Username:</label>
     <input class="form-input" type="text" id="input-example-1" />
     <label class="form-label" for="input-example-1">Choose a Password:</label>
