--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/spectre.min.css" />
+    <link rel="stylesheet" href="/css/spectre-exp.min.css" />
     <link rel="stylesheet" href="/css/spectre-icons.min.css" />
   </head>
 
