--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -4,13 +4,13 @@
         <!--USER INFORMATION-->
         <h2>Personal Information</h2>
         <!--first_name-->
-        <label class="form-label form-inline" for="first_name">Enter your LAST Name:</label>
+        <label class="form-label form-inline" for="first_name">Enter your FIRST Name:</label>
         <input class="form-input" type="text" id="first_name" name="first_name" />
         <!--last_name-->
         <label class="form-label form-inline" for="last_name">Enter your LAST Name:</label>
         <input class="form-input" type="text" id="last_name" name="last_name" />
         <!--email-->
-        <label class="form-label form-inline" for="email">Enter your LAST Name:</label>
+        <label class="form-label form-inline" for="email">Enter your email:</label>
         <input class="form-input" type="email" id="email" name="email" placeholder="Type email here..."
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
         <!--personal phone-->
@@ -19,7 +19,7 @@
         <!--city-->
         <!--zip-->
         <!--gender orientation: allow NULL-->
-        <label class="form-label">Gender Orientation:</label>
+        <label class="sex form-label">Gender Identity:</label>
         <label class="form-radio">
             <input type="radio" id="sex" name="sex">
             <i class="form-icon"></i> Non-Binary
@@ -34,10 +34,42 @@
         </label>
         <label class="form-radio">
             <input type="radio" id="sex" name="sex">
+            <i class="form-icon"></i> Other
+        </label>
+        <label class="form-radio">
+            <input type="radio" id="sex" name="sex">
             <i class="form-icon"></i> Prefer not identify
         </label>
         <!--ethnicity-->
-
+        <label class="ethnicity form-label">Ethnicity: Select at least one.</label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Hispanic
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> White
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Black or African American
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> American Indian and Alaska Native
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Asian
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Some Other Race
+        </label>
         <!--hire date-->
         <!--position-->
         <!--work phone-->
