added register button on login page

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -8,3 +8,7 @@
     <button class="btn" type="submit">Login</button>
   </form>
 </div>
+<div>
+  <h3>New to LaborHub? Click to register!</h3>
+  <button class="btn btn-primary">Register Here</button>
+</div>
