finished content register page

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -68,6 +68,8 @@
             <input type="radio" id="sex" name="sex">
             <i class="form-icon"></i> Prefer not identify
         </label>
+        <!--sexual_orientation-->
+
         <!--ethnicity-->
         <label class="ethnicity form-label">Ethnicity: Select at least one.</label>
         <label class="form-checkbox">
@@ -101,15 +103,28 @@
     <!--employee information-->
     <h3>Employee Information</h3>
         <!--hire date-->
+        <label class="form-label form-inline" for="hire_date">Select Date of Hire:</label>
+        <input class="form-input" type="date" id="hire_date" name="hire_date" />
         <!--position-->
+        <label class="form-label form-inline" for="position">Enter your position:</label>
+        <input class="form-input" type="text" id="position" name="position" placeholder="...Junior..." />
+        <!--title-->
+        <label class="form-label form-inline" for="title">Enter your position:</label>
+        <input class="form-input" type="text" id="title" name="title" placeholder="...Web Developer..." />
         <!--work phone-->
+        <label class="form-label form-inline" for="work_phone">Enter your work phone number:</label>
+        <input class="form-input" type="tel" id="work_phone" name="work_phone" />
         <!--work phone ext-->
+        <label class="form-label form-inline" for="work_phoneext">Enter your work phone extension:</label>
+        <input class="form-input" type="number" id="work_phoneext" name="work_phoneext" placeholder="0000" />
         <!--base rate-->
+        <label class="form-label form-inline" for="base_rate">Enter your base rate: Ex. "23" for "23/hour"</label>
+        <input class="form-input" type="number" id="base_rate" name="base_rate" />
         <!--annual salary-->
-
-
+        <label class="form-label form-inline" for="annual_salary">Enter your annual salary: Ex. "40000" for "40000/year"</label>
+        <input class="form-input" type="number" id="annual_salary" name="annual_salary" />
         <!--USERNAME AND PASSWORD-->
-        <h3>Create a username and password:</h3>
+        <h3>Create a Username and Password:</h3>
         <!--usr_name-->
         <label class="form-label form-inline" for="usr_name">Create a Username:</label>
         <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
