used sass compiler to add custom colors to spectre

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/jass.css" />
-    <link rel="stylesheet" href="/css/spectre.min.css" />
+    <link rel="stylesheet" href="/css/spectre-customColors.css" />
     <link rel="stylesheet" href="/css/spectre-exp.min.css" />
     <link rel="stylesheet" href="/css/spectre-icons.min.css" />
   </head>
