--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -17,9 +17,9 @@
 
     {{! Desktop View Nav   }}
     <div class="hide-md">
-      <a href="/" class="btn btn-link">HOME</a>
-      <a href="/dashboard" class="btn btn-link">DASHBOARD</a>
-      <a href="/login" class="btn btn-link">LOGIN</a>
+      <a href="/" class="text-light">HOME</a>
+      <a href="/dashboard" class="text-light">DASHBOARD</a>
+      <a href="/login" class="text-light">LOGIN</a>
     </div>
   </nav>
 </header>
