made each section of the form into cards.

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -12,6 +12,7 @@
     font-family: 'Roboto', Tahoma, Verdana, sans-serif;
     background-color: var(--light);
     color: var(--dark);
+    margin: 20px !important;
   }
 
 /* NAVBAR */
