--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -2,38 +2,45 @@
     <h2>Register below:</h2>
     <form action="/register" method="POST">
         <!--USER INFORMATION-->
-        <h3>Personal Information</h3>
-        <!--first_name-->
-        <label class="form-label form-inline" for="first_name">Enter your FIRST Name:</label>
-        <input class="form-input" type="text" id="first_name" name="first_name" />
-        <!--last_name-->
-        <label class="form-label form-inline" for="last_name">Enter your LAST Name:</label>
-        <input class="form-input" type="text" id="last_name" name="last_name" />
-        <!--email-->
-        <label class="form-label form-inline" for="email">Enter your email:</label>
-        <input class="form-input" type="email" id="email" name="email" placeholder="Type email here..."
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
-        <!--personal phone-->
-        <label class="form-label form-inline" for="personal_phone">Enter your personal phone number:</label>
-        <input class="form-input" type="tel" id="personal_phone" name="personal_phone" />
-        <!--address 1--> <!--address 2-->
-        <label class="form-label form-inline" for="address1">Enter your address:</label>
-        <input class="form-input" type="text" id="address1" name="address1" placeholder="...123 Main St...">
-        <input class="form-input" type="text" id="address2" name="address2" placeholder="...Apt/Unit Number...">
-        <!--city-->
-        <label class="form-label form-inline" for="city">Enter your city:</label>
-        <input class="form-input" type="text" id="city" name="city" placeholder="...Atlanta...">
-        <!--state-->
-        <label class="form-label form-inline" for="state">Enter your state:</label>
-        <select class="form-select" id="state" name="state">
-            <option>Choose an option</option>
-            {{#each statesArr as | state |}}
-            <option>{{state}}</option>
-            {{/each}}
-        </select>
-        <!--zip-->
-        <label class="form-label form-inline" for="zip">Enter your zip:</label>
-        <input class="form-input" type="text" id="zip" name="zip" />
+        <div class="card">
+            <div class="card-header">
+                <div class="card-title h5">Personal Information</div>
+                <!--first_name-->
+                <label class="form-label form-inline" for="first_name">Enter your FIRST Name:</label>
+                <input class="form-input" type="text" id="first_name" name="first_name" />
+                <!--last_name-->
+                <label class="form-label form-inline" for="last_name">Enter your LAST Name:</label>
+                <input class="form-input" type="text" id="last_name" name="last_name" />
+                <!--email-->
+                <label class="form-label form-inline" for="email">Enter your email:</label>
+                <input class="form-input" type="email" id="email" name="email" placeholder="Type email here..."
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
+                <!--personal phone-->
+                <label class="form-label form-inline" for="personal_phone">Enter your personal phone number:</label>
+                <input class="form-input" type="tel" id="personal_phone" name="personal_phone" />
+                <!--address 1--> <!--address 2-->
+                <label class="form-label form-inline" for="address1">Enter your address:</label>
+                <input class="form-input" type="text" id="address1" name="address1" placeholder="123 Main St...">
+                <input class="form-input" type="text" id="address2" name="address2"
+                    placeholder="Apt/Bldg/Unit Number...">
+                <!--city-->
+                <label class="form-label form-inline" for="city">Enter your city:</label>
+                <input class="form-input" type="text" id="city" name="city" placeholder="Atlanta...">
+                <!--state-->
+                <label class="form-label form-inline" for="state">Select your US state/territory from the list:</label>
+                <select class="form-select" id="state" name="state">
+                    <option>Choose an option</option>
+                    {{#each statesArr as | state |}}
+                    <option>{{state}}</option>
+                    {{/each}}
+                </select>
+                <!--zip-->
+                <label class="form-label form-inline" for="zip">Enter your zip code:</label>
+                <input class="form-input" type="text" id="zip" name="zip" />
+            </div>
+        </div>
+        <!--GENDER AND SEX-->
+        <h3>Gender Identity and Sexual Orientation</h3>
         <!--gender orientation: allow NULL-->
         <label class="sex form-label ">Gender Identity:</label>
         <label class="form-radio">
@@ -41,7 +48,7 @@
             <i class="form-icon"></i> Female
         </label>
         <label class="form-radio">
-            <input type="radio" id="sex" name="sex" checked>
+            <input type="radio" id="sex" name="sex">
             <i class="form-icon"></i> Male
         </label>
         <label class="form-radio">
@@ -61,8 +68,8 @@
             <i class="form-icon"></i> Transgender-Non-Binary
         </label>
         <label class="form-radio">
-        <input type="radio" id="sex" name="sex">
-        <i class="form-icon"></i> Other
+            <input type="radio" id="sex" name="sex">
+            <i class="form-icon"></i> Other
         </label>
         <label class="form-radio">
             <input type="radio" id="sex" name="sex">
@@ -103,19 +110,8 @@
             <i class="form-icon"></i> Prefer to not identify
         </label>
         <!--ethnicity-->
-        <label class="ethnicity form-label">Ethnicity: Select at least one.</label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Hispanic
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> White
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Black or African American
-        </label>
+        <h3>Ethnicity:</h3>
+        <label class="ethnicity form-label">Please select all that apply.</label>
         <label class="form-checkbox">
             <input type="checkbox" id="ethnicity" name="ethnicity">
             <i class="form-icon"></i> American Indian and Alaska Native
@@ -126,7 +122,19 @@
         </label>
         <label class="form-checkbox">
             <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Black or African American
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> Hispanic
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
+        </label>
+        <label class="form-checkbox">
+            <input type="checkbox" id="ethnicity" name="ethnicity">
+            <i class="form-icon"></i> White
         </label>
         <label class="form-checkbox">
             <input type="checkbox" id="ethnicity" name="ethnicity">
@@ -141,7 +149,7 @@
         <label class="form-label form-inline" for="position">Enter your position:</label>
         <input class="form-input" type="text" id="position" name="position" placeholder="...Junior..." />
         <!--title-->
-        <label class="form-label form-inline" for="title">Enter your position:</label>
+        <label class="form-label form-inline" for="title">Enter your title:</label>
         <input class="form-input" type="text" id="title" name="title" placeholder="...Web Developer..." />
         <!--work phone-->
         <label class="form-label form-inline" for="work_phone">Enter your work phone number:</label>
