Added link to register button from login screen

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -11,5 +11,5 @@
 </div>
 <div>
   <h3>New to LaborHub? Click to register!</h3>
-  <button class="btn btn-primary">Register Here</button>
+  <button class="btn btn-primary"><a href="/register">Register Here</a></button>
 </div>
