--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -1,10 +1,28 @@
 <div class="form-group">
     <h2>Register below:</h2>
     <form action="/register" method="POST">
-        <!--USER INFORMATION-->
-        <div class="card">
+        <!--USERNAME AND PASSWORD-->
+        <div class="card registercard">
+            <div class="card-header">
+                <div class="card-title h5">Final Step!</div>
+            </div>
+            <div class="card-body">
+                <!--usr_name-->
+                <label class="form-label form-inline" for="usr_name">Create a Username:</label>
+                <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
+                <!--password-->
+                <label class="form-label form-inline" for="password">Create a Password:</label>
+                <input class="form-input" type="password" id="password" name="password" placeholder="..."
+                    pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}$" />
+            </div>
+        </div>
+
+        <!--PERSONAL INFORMATION-->
+        <div class="card registercard">
             <div class="card-header">
                 <div class="card-title h5">Personal Information</div>
+            </div>
+            <div class="card-body">
                 <!--first_name-->
                 <label class="form-label form-inline" for="first_name">Enter your FIRST Name:</label>
                 <input class="form-input" type="text" id="first_name" name="first_name" />
@@ -27,7 +45,8 @@
                 <label class="form-label form-inline" for="city">Enter your city:</label>
                 <input class="form-input" type="text" id="city" name="city" placeholder="Atlanta...">
                 <!--state-->
-                <label class="form-label form-inline" for="state">Select your US state/territory from the list:</label>
+                <label class="form-label form-inline" for="state">Select your US state/territory from the
+                    list:</label>
                 <select class="form-select" id="state" name="state">
                     <option>Choose an option</option>
                     {{#each statesArr as | state |}}
@@ -39,141 +58,155 @@
                 <input class="form-input" type="text" id="zip" name="zip" />
             </div>
         </div>
-        <!--GENDER AND SEX-->
-        <h3>Gender Identity and Sexual Orientation</h3>
-        <!--gender orientation: allow NULL-->
-        <label class="sex form-label ">Gender Identity:</label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Female
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Male
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Non-Binary
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Transgender-Female
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Transgender-Male
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Transgender-Non-Binary
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Other
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sex" name="sex">
-            <i class="form-icon"></i> Prefer to not identify
-        </label>
-        <!--sexual_orientation-->
-        <label class="ethnicity form-label">Sexual Orientation: Select at least one.</label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Asexual
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Bisexual
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Gay
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Heterosexual
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Lesbian
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Pansexual
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Other
-        </label>
-        <label class="form-radio">
-            <input type="radio" id="sexual_orientation" name="sexual_orientation">
-            <i class="form-icon"></i> Prefer to not identify
-        </label>
-        <!--ethnicity-->
-        <h3>Ethnicity:</h3>
-        <label class="ethnicity form-label">Please select all that apply.</label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> American Indian and Alaska Native
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Asian
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Black or African American
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Hispanic
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> White
-        </label>
-        <label class="form-checkbox">
-            <input type="checkbox" id="ethnicity" name="ethnicity">
-            <i class="form-icon"></i> Some Other Race
-        </label>
-        <!--employee information-->
-        <h3>Employee Information</h3>
-        <!--hire date-->
-        <label class="form-label form-inline" for="hire_date">Select Date of Hire:</label>
-        <input class="form-input" type="date" id="hire_date" name="hire_date" />
-        <!--position-->
-        <label class="form-label form-inline" for="position">Enter your position:</label>
-        <input class="form-input" type="text" id="position" name="position" placeholder="...Junior..." />
-        <!--title-->
-        <label class="form-label form-inline" for="title">Enter your title:</label>
-        <input class="form-input" type="text" id="title" name="title" placeholder="...Web Developer..." />
-        <!--work phone-->
-        <label class="form-label form-inline" for="work_phone">Enter your work phone number:</label>
-        <input class="form-input" type="tel" id="work_phone" name="work_phone" />
-        <!--work phone ext-->
-        <label class="form-label form-inline" for="work_phoneext">Enter your work phone extension:</label>
-        <input class="form-input" type="number" id="work_phoneext" name="work_phoneext" placeholder="0000" />
-        <!--base rate-->
-        <label class="form-label form-inline" for="base_rate">Enter your base rate: Ex. "23" for "23/hour"</label>
-        <input class="form-input" type="number" id="base_rate" name="base_rate" />
-        <!--annual salary-->
-        <label class="form-label form-inline" for="annual_salary">Enter your annual salary: Ex. "40000" for
-            "40000/year"</label>
-        <input class="form-input" type="number" id="annual_salary" name="annual_salary" />
-        <!--USERNAME AND PASSWORD-->
-        <h3>Create a Username and Password:</h3>
-        <!--usr_name-->
-        <label class="form-label form-inline" for="usr_name">Create a Username:</label>
-        <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
-        <!--password-->
-        <label class="form-label form-inline" for="password">Create a Password:</label>
-        <input class="form-input" type="password" id="password" name="password" placeholder="..."
-            pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}$" />
+
+        <!--GENDER, SEXUALITY, ETHNICITY-->
+        <div class="card registercard">
+            <div class="card-header">
+                <div class="card-title h5">Gender Identity, Sexual Orientation and Ethnicity</div>
+            </div>
+            <!--gender orientation: allow NULL-->
+            <div class="card-body">
+                <div class="card-header">
+                    <div class="card-subtitle text-gray">Gender Identity:</div>
+                </div>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Female
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Male
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Non-Binary
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Transgender-Female
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Transgender-Male
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Transgender-Non-Binary
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Other
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sex" name="sex">
+                    <i class="form-icon"></i> Prefer to not identify
+                </label>
+                <!--sexual_orientation-->
+                <div class="card-header">
+                    <div class="card-subtitle text-gray">Sexual Orientation:</div>
+                </div>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Asexual
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Bisexual
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Gay
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Heterosexual
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Lesbian
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Pansexual
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Other
+                </label>
+                <label class="form-radio">
+                    <input type="radio" id="sexual_orientation" name="sexual_orientation">
+                    <i class="form-icon"></i> Prefer to not identify
+                </label>
+                <!--ethnicity-->
+                <div class="card-header">
+                    <div class="card-subtitle text-gray">Ethnicity (Please select all that apply):</div>
+                </div>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> American Indian and Alaska Native
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> Asian
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> Black or African American
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> Hispanic
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> White
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" id="ethnicity" name="ethnicity">
+                    <i class="form-icon"></i> Some Other Race
+                </label>
+            </div>
+        </div>
+
+        <!--EMPLOYEE INFORMATION-->
+        <div class="card registercard">
+            <div class="card-header">
+                <div class="card-title h5">Employee Information</div>
+            </div>
+            <div class="card-body">
+                <!--hire date-->
+                <label class="form-label form-inline" for="hire_date">Select Date of Hire:</label>
+                <input class="form-input" type="date" id="hire_date" name="hire_date" />
+                <!--position-->
+                <label class="form-label form-inline" for="position">Enter your position:</label>
+                <input class="form-input" type="text" id="position" name="position" />
+                <!--title-->
+                <label class="form-label form-inline" for="title">Enter your title:</label>
+                <input class="form-input" type="text" id="title" name="title" />
+                <!--work phone-->
+                <label class="form-label form-inline" for="work_phone">Enter your work phone number:</label>
+                <input class="form-input" type="tel" id="work_phone" name="work_phone" />
+                <!--work phone ext-->
+                <label class="form-label form-inline" for="work_phoneext">Enter your work phone extension:</label>
+                <input class="form-input" type="number" id="work_phoneext" name="work_phoneext" placeholder="0000" />
+                <!--base rate-->
+                <label class="form-label form-inline" for="base_rate">Enter your base rate: </label>
+                    <p class="exampletext">Example: Write "23" instead of "$23/hour"</p>
+                <input class="form-input" type="number" id="base_rate" name="base_rate" />
+                <!--annual salary-->
+                <label class="form-label form-inline" for="annual_salary">Enter your annual salary: </label>
+                    <p class="exampletext">Example: Write "40000" instead of "$40,000/year"</p>
+                <input class="form-input" type="number" id="annual_salary" name="annual_salary" />
+            </div>
+        </div>
+
         <!--SUBMIT BUTTON-->
-        <button class="submit btn">Sign-Up</button>
-    </form>
+        <button class="submit btn">Submit Registration</button>
+
+</div>
+</form>
 </div>
