--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -12,7 +12,7 @@
     font-family: 'Roboto', Tahoma, Verdana, sans-serif;
     background-color: var(--light);
     color: var(--dark) !important;
-    margin: 20px !important;
+    margin: 1rem !important;
   }
 
 /* NAVBAR */
