placed accordian start under the card header

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -48,6 +48,9 @@ a:hover {
 div.registercard{
   margin-bottom: 1rem;
 }
+div.accCard{
+  margin-left: 1rem;
+}
 button.submit {
   margin: 1rem;
   background-color: var(--mustard);
