--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -4,13 +4,13 @@
         <!--USERNAME AND PASSWORD-->
 
         <div class="card registercard"> <!--CARD START-->
-            <div class="accordion"> <!--ACCORDION START-->
+            <div class="card-header">
+                <div class="card-title h5">Create Username and Password</div>
+            </div>
+            <div class="accordion accCard"> <!--ACCORDION START-->
                 <input type="checkbox" id="accordion-1" name="accordion-checkbox" hidden> <!--ACCORDION ARROW START-->
                 <label class="accordion-header" for="accordion-1">
                     <i class="icon icon-arrow-right mr-1"></i>
-                    <div class="card-header">
-                        <div class="card-title h5">Create Username and Password</div>
-                    </div>
                 </label> <!--ACCORDION ARROW END-->
                 <div class="accordion-body">
                     <div class="card-body">
